<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar style="@style/AppToolBarStyle">

        <TextView style="@style/ToolbarTitleTextView" />

        <TextView
            android:id="@+id/tvFinish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_size_6"
            android:gravity="center"
            android:minWidth="@dimen/margin_size_70"
            android:paddingLeft="@dimen/margin_size_12"
            android:paddingRight="@dimen/margin_size_12"
            android:text="@string/finish"
            android:textColor="@color/textview_bg"
            android:textSize="@dimen/font_size_16" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llTips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_16"
            android:background="@color/white"
            android:lineSpacingExtra="@dimen/margin_size_2"
            android:text="@string/without_permission"
            android:textColor="@color/blow_gray"
            android:textSize="@dimen/font_size_16" />

        <Button
            android:id="@+id/bt_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_20"
            android:background="@drawable/toolbar_button_bg"
            android:paddingBottom="@dimen/margin_size_10"
            android:paddingLeft="@dimen/margin_size_30"
            android:paddingRight="@dimen/margin_size_30"
            android:paddingTop="@dimen/margin_size_10"
            android:text="@string/open_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom"
            android:background="@color/transparent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:overScrollMode="never"
                android:scrollbars="vertical" />

            <FrameLayout
                android:id="@+id/flFolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/translucent"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="@dimen/margin_size_70"
                android:visibility="gone">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvFolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="vertical" />
            </FrameLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_46"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlFolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="@dimen/margin_size_70"
                android:paddingLeft="@dimen/margin_size_12"
                android:paddingRight="@dimen/margin_size_12">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:maxWidth="200dp"
                    android:text="@string/myPhotos"
                    android:textColor="@color/textview_bg"
                    android:textSize="@dimen/font_size_16" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvText"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/margin_size_2"
                    android:layout_marginLeft="@dimen/margin_size_2"
                    android:layout_toRightOf="@+id/tvText"
                    android:src="@drawable/ic_indicator" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvPreview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:minWidth="@dimen/margin_size_70"
                android:paddingLeft="@dimen/margin_size_12"
                android:paddingRight="@dimen/margin_size_12"
                android:text="@string/preview"
                android:textColor="@color/textview_bg"
                android:textSize="@dimen/font_size_16" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>